Updated div format

--- a/css/style.css
+++ b/css/style.css
@@ -44,27 +44,31 @@ footer {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border: 0px solid white;
+    border-bottom: 2px solid white;
+    border-left: 5px solid white;
 }
 .blue {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border: 0px solid white;
+    border-right: 5px solid white;
+    border-top: 2px solid white;
 }
 .yellow {
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border: 0px solid white;
+    border-bottom: 2px solid white;
+    border-left: 5px solid white;
 }
 .green {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border: 0px solid white;
+    border-right: 5px solid white;
+    border-top: 2px solid white;
 }
