--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,20 @@ footer {
     background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 255, 1) 25%, rgba(0, 102, 255, 1) 70%, rgba(0, 0, 0, 1) 100%);
     border: 5px solid white;
 }
+footer p {
+    text-align: right;
+    font-size: 20px;
+    padding: 15px 15px 15px 0;
+}
+div.blue > * {
+    color: #C4C4C4;
+}
+div.yellow > p {
+    color: #707070;
+}
+div.green > h2 {
+    color: white;
+}
 .introduction {
     border-radius: 15px;
     margin-top: 15px;
